fix star bullets & transparent gradient on ios

--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,161 @@
-/*! normalize.css v8.0.0 | MIT License | github.com/necolas/normalize.css */button,hr,input{overflow:visible}progress,sub,sup{vertical-align:baseline}[type=checkbox],[type=radio],legend{box-sizing:border-box;padding:0}html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}h1{font-size:2em;margin:.67em 0}hr{box-sizing:content-box;height:0}code,kbd,pre,samp{font-family:monospace,monospace;font-size:1em}a{background-color:transparent}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:bolder}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative}sub{bottom:-.25em}sup{top:-.5em}img{border-style:none}button,input,optgroup,select,textarea{font-family:inherit;font-size:100%;line-height:1.15;margin:0}button,select{text-transform:none}[type=button],[type=reset],[type=submit],button{-webkit-appearance:button}[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner,button::-moz-focus-inner{border-style:none;padding:0}[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring,button:-moz-focusring{outline:ButtonText dotted 1px}fieldset{padding:.35em .75em .625em}legend{color:inherit;display:table;max-width:100%;white-space:normal}textarea{overflow:auto}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details{display:block}summary{display:list-item}[hidden],template{display:none}
+/*! normalize.css v8.0.0 | MIT License | github.com/necolas/normalize.css */
+button,
+hr,
+input {
+  overflow: visible;
+}
+progress,
+sub,
+sup {
+  vertical-align: baseline;
+}
+[type='checkbox'],
+[type='radio'],
+legend {
+  box-sizing: border-box;
+  padding: 0;
+}
+html {
+  line-height: 1.15;
+  -webkit-text-size-adjust: 100%;
+}
+body {
+  margin: 0;
+}
+h1 {
+  font-size: 2em;
+  margin: 0.67em 0;
+}
+hr {
+  box-sizing: content-box;
+  height: 0;
+}
+code,
+kbd,
+pre,
+samp {
+  font-family: monospace, monospace;
+  font-size: 1em;
+}
+a {
+  background-color: transparent;
+}
+abbr[title] {
+  border-bottom: none;
+  text-decoration: underline;
+  text-decoration: underline dotted;
+}
+b,
+strong {
+  font-weight: bolder;
+}
+small {
+  font-size: 80%;
+}
+sub,
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+}
+sub {
+  bottom: -0.25em;
+}
+sup {
+  top: -0.5em;
+}
+img {
+  border-style: none;
+}
+button,
+input,
+optgroup,
+select,
+textarea {
+  font-family: inherit;
+  font-size: 100%;
+  line-height: 1.15;
+  margin: 0;
+}
+button,
+select {
+  text-transform: none;
+}
+[type='button'],
+[type='reset'],
+[type='submit'],
+button {
+  -webkit-appearance: button;
+}
+[type='button']::-moz-focus-inner,
+[type='reset']::-moz-focus-inner,
+[type='submit']::-moz-focus-inner,
+button::-moz-focus-inner {
+  border-style: none;
+  padding: 0;
+}
+[type='button']:-moz-focusring,
+[type='reset']:-moz-focusring,
+[type='submit']:-moz-focusring,
+button:-moz-focusring {
+  outline: ButtonText dotted 1px;
+}
+fieldset {
+  padding: 0.35em 0.75em 0.625em;
+}
+legend {
+  color: inherit;
+  display: table;
+  max-width: 100%;
+  white-space: normal;
+}
+textarea {
+  overflow: auto;
+}
+[type='number']::-webkit-inner-spin-button,
+[type='number']::-webkit-outer-spin-button {
+  height: auto;
+}
+[type='search'] {
+  -webkit-appearance: textfield;
+  outline-offset: -2px;
+}
+[type='search']::-webkit-search-decoration {
+  -webkit-appearance: none;
+}
+::-webkit-file-upload-button {
+  -webkit-appearance: button;
+  font: inherit;
+}
+details {
+  display: block;
+}
+summary {
+  display: list-item;
+}
+[hidden],
+template {
+  display: none;
+}
 
 @font-face {
   font-family: 'lunchtype24expanded_medium';
   src: url('./fonts/lunchtype24-medium-expanded-webfont.eot');
-  src: url('./fonts/lunchtype24-medium-expanded-webfont.eot?#iefix') format('embedded-opentype'),
-       url('./fonts/lunchtype24-medium-expanded-webfont.woff2') format('woff2'),
-       url('./fonts/lunchtype24-medium-expanded-webfont.woff') format('woff'),
-       url('./fonts/lunchtype24-medium-expanded-webfont.ttf') format('truetype'),
-       url('./fonts/lunchtype24-medium-expanded-webfont.svg#lunchtype24expanded_medium') format('svg');
+  src: url('./fonts/lunchtype24-medium-expanded-webfont.eot?#iefix')
+      format('embedded-opentype'),
+    url('./fonts/lunchtype24-medium-expanded-webfont.woff2') format('woff2'),
+    url('./fonts/lunchtype24-medium-expanded-webfont.woff') format('woff'),
+    url('./fonts/lunchtype24-medium-expanded-webfont.ttf') format('truetype'),
+    url('./fonts/lunchtype24-medium-expanded-webfont.svg#lunchtype24expanded_medium')
+      format('svg');
   font-weight: normal;
   font-style: normal;
-
 }
 
 body {
   position: relative;
 
-  background-color: #0A2137;
+  background-color: #0a2137;
 }
 
 .title__name,
@@ -63,7 +202,7 @@ body {
   margin: 0 10px 0 0;
   padding: 0;
 
-  color: #46FF47;
+  color: #46ff47;
 }
 
 @media (min-width: 600px) {
@@ -105,7 +244,7 @@ body {
   margin: 0 0 24px 0;
   padding: 0;
 
-  color: #FFF;
+  color: #fff;
 }
 
 .muted_text {
@@ -141,11 +280,16 @@ body {
 }
 
 .skills .text:before {
-  content: '✴';
+  content: '';
 
   position: absolute;
-  top: 0;
+  top: 3px;
   left: -28px;
+
+  width: 22px;
+  height: 22px;
+
+  background-image: url('data:image/svg+xml;utf8,<svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M10.9601 0L11.7205 9.12451L18.7102 3.21021L12.7958 10.2L21.9203 10.9602L12.7958 11.7205L18.7102 18.7102L11.7205 12.7959L10.9601 21.9204L10.1998 12.7959L3.21021 18.7102L9.12457 11.7205L0 10.96L9.12457 10.2L3.21021 3.21021L10.1998 9.12451L10.9601 0Z" fill="white"/></svg>');
 }
 
 .skills .text:last-child {
@@ -171,7 +315,7 @@ body {
 }
 
 .contacts__item:hover .changeable_color {
-  fill: #46FF47;
+  fill: #46ff47;
 }
 
 .contacts__item:not(:last-child) {
@@ -187,10 +331,11 @@ body {
   width: 100vw;
   height: 100vw;
 
-  background: -moz-linear-gradient(top, rgba(17,44,70,1) 59%, rgba(229,229,229,0) 100%);
-  background: -webkit-linear-gradient(top, rgba(17,44,70,1) 59%,rgba(229,229,229,0) 100%);
-  background: linear-gradient(to bottom, rgba(17,44,70,1) 59%,rgba(229,229,229,0) 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#112c46', endColorstr='#00e5e5e5',GradientType=0 );
+  background: #112c46;
+background: -moz-linear-gradient(top, #112c46 40%, #0a2137 100%);
+background: -webkit-linear-gradient(top, #112c46 40%,#0a2137 100%);
+background: linear-gradient(to bottom, #112c46 40%,#0a2137 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#112c46', endColorstr='#0a2137',GradientType=0 );
   border-radius: 0 0 100% 0;
 }
 
@@ -198,14 +343,10 @@ body {
   .bg_dec_shape {
     left: unset;
     right: 0;
-  
+
     width: 100vh;
     height: 100vh;
-  
-    background: -moz-linear-gradient(top, rgba(17,44,70,1) 59%, rgba(229,229,229,0) 100%);
-    background: -webkit-linear-gradient(top, rgba(17,44,70,1) 59%,rgba(229,229,229,0) 100%);
-    background: linear-gradient(to bottom, rgba(17,44,70,1) 59%,rgba(229,229,229,0) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#112c46', endColorstr='#00e5e5e5',GradientType=0 );
+
     border-radius: 100% 0 0 0;
   }
 }
